--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
     </style>
 </head>
     <body>
-    <div class="separator" style="clear: both; text-align: center;"><iframe width="100%" height="100%"
-    src="https://cdn.videy.co/6USWJgAx1.mp4">Your browser does not support the video tag..</video>
-    <a class="cta-button" href="https://moviereview20255.blogspot.com" target="_blank">Not just movement in a quiet room</a>
+  <div class="video-container"><video controls autoplay muted><source src="https://cdn.videy.co/Sa7zwAF61.mp4" type="video/mp4">Your browser does not support the video tag..</video>
+    <a class="cta-button" href="https://moviereview20255.blogspot.com" target="_blank">Not just movement in a quiet room</a> 
       
 <!-- Histats.com  (div with counter) --><div id="histats_counter"></div>
 <!-- Histats.com  START  (aync)-->
